--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,10 @@
 [package]
-name = "bevy_game" # ToDo
+name = "acid_rain"
 version = "0.1.0"
 publish = false
-authors = ["Niklas Eicker <git@nikl.me>"] # ToDo: you are the author ;)
+authors = ["Pontus horn <pontus.horn@gmail.com>"]
 edition = "2021"
 exclude = ["dist", "build", "assets", "credits"]
-
-[workspace]
-members = ["mobile"]
 
 [profile.dev.package."*"]
 opt-level = 3
@@ -30,7 +27,7 @@ dev = [
 ]
 
 # All of Bevy's default features exept for the audio related ones (bevy_audio, vorbis), since they clash with bevy_kira_audio
-#   and android_shared_stdcxx, since that is covered in `mobile`
+#   and android_shared_stdcxx
 [dependencies]
 bevy = { version = "0.12", default-features = false, features = [
     "animation",
